# Gamepad-Interface

./: CMakeLists.txt  GameController.cpp  GameController.h  README.md  main.cpp
cmake/: Qt5CoreConfig.cmake
include/: cppTypes.h  gamepadCommand.h  utilities.h
